--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,8 @@ li{
 	border-top-right-radius: 20px;
 	border-top-left-radius: 20px;
 }
+@media screen and (max-width: 768px) {
+	*{
+		font-size: 18px;
+	}
+}
