--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,12 @@ li{
 	border-top-left-radius: 20px;
 }
  @media screen and (max-width: 768px) {
+    body{
+    	display: block;
+    }
+    .container{
+    	margin-top: 50px;
+    }
     h1 {
     	/*background-color: red;*/
       	font-size: 20px;
